# freerdp-web

./: .gitattributes  .gitignore  CLIPPING-DEBUG.md  CREATING-SECURITY-POLICY.md  CREATING-THEMES.md  MEMORY-USAGE.md  README.md  TROUBLESHOOOTING_GFX_ISSUES.md  buildandrun.ps1  createNewRelease.ps1  docker-compose.yml  gfx.txt  justbuildwasm.ps1
backend/: .env.example  Dockerfile  rdp_bridge.py  rdp_security.py  requirements.txt  server.py  wire_format.py
backend/native/: CMakeLists.txt  GFX_DEBUGGING_NOTES.md  rdp_bridge.c  rdp_bridge.h  rdpsnd_bridge.c
backend/security/: rdp-bridge-policy.json
frontend/: Dockerfile  app.js  audio-worklet.js  gfx-worker.js  index.html  nginx.conf  rdp-client.js  rdp-security.js  rdp-themes.js  wire-format.js
frontend/clearcodec/: CMakeLists.txt  build.sh  clearcodec_wasm.c
frontend/favicons/: site.webmanifest
frontend/progressive/: CMakeLists.txt  RFX_WASM_DEBUGGING_NOTES.md  build.sh  progressive_wasm.c  rfx_decode.c  rfx_dwt.c  rfx_rlgr.c  rfx_types.h
